IF (WEBKIT_USE_UCLIBC)
    ADD_DEFINITIONS (-DHAVE_UCLIBC)
ENDIF (WEBKIT_USE_UCLIBC)

INCLUDE (pcre/CMakeLists.txt)
INCLUDE (API/CMakeLists.txt)
INCLUDE (bytecompiler/CMakeLists.txt)
INCLUDE (debugger/CMakeLists.txt)
INCLUDE (runtime/CMakeLists.txt)
INCLUDE (parser/CMakeLists.txt)
INCLUDE (profiler/CMakeLists.txt)
INCLUDE (VM/CMakeLists.txt)
    
INCLUDE_DIRECTORIES (
    ${CMAKE_SOURCE_DIR}/BAL/Base
    ${CMAKE_SOURCE_DIR}/BAL/Base/wtf
    ${CMAKE_BINARY_DIR}/generated_link/OWBAL
    bindings
    bindings/bal
    bindings/c
    bytecompiler
    debugger
    ForwardingHeaders
    parser
    pcre
    runtime
    VM
    profiler
    #wtf
    ${CMAKE_BINARY_DIR}/generated_sources/parser
    ${CMAKE_BINARY_DIR}/generated_sources/runtime
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/API
    ${CMAKE_SOURCE_DIR}
    ${ICU_INCLUDE}
    #${GTK2_INCLUDE}
    ${GTHREAD_INCLUDE}
    )

IF (WEBKIT_USE_I18N STREQUAL "GENERIC")
    INCLUDE_DIRECTORIES (
        icu
    )
ENDIF (WEBKIT_USE_I18N STREQUAL "GENERIC")

IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
    INCLUDE_DIRECTORIES (
        ${GTK2_INCLUDE_DIRS}
    )
ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")


IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (jscore ${JSCORE_SRC})
ELSE (BUILD_SHARED_LIBS)
    ADD_LIBRARY (jscore STATIC ${JSCORE_SRC})
ENDIF (BUILD_SHARED_LIBS)
TARGET_LINK_LIBRARIES (jscore pthread)
    
IF (OWBAL_PLATFORM_MACPORT)
    SET_TARGET_PROPERTIES(jscore
        PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
ENDIF (OWBAL_PLATFORM_MACPORT)
    
INSTALL (TARGETS jscore
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
ADD_DEPENDENCIES (jscore generated-sources)

IF (COMPILE_TESTS)

# do the link_directories *before* add_executable
   IF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")
      LINK_DIRECTORIES(${GTK2_LIBRARY_DIRS})
   ELSEIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "SDL")
      LINK_DIRECTORIES(${SDL_LIBRARY_DIRS})
   ENDIF (${OWBAL_PLATFORM_GRAPHICS} STREQUAL "GTK")

    IF (OWBAL_PLATFORM_MACPORT)
        TARGET_LINK_LIBRARIES (jscore
            ${LIBICU_LIBS}
        )
    ENDIF (OWBAL_PLATFORM_MACPORT)
ENDIF (COMPILE_TESTS)
